--- a/README.org
+++ b/README.org
@@ -28,7 +28,7 @@ are running on H4H cluster at [[http://www.uhnresearch.ca/][UHN]], in Toronto Ca
 
 Licence: MIT Licence
 
-* Algorithms below include:
+* Algorithms listed will include:
    - Feature engineering & regularization (lasso, ridge, elastic)
    - Data subsetting, extraction, reformating
    - Subsampling, mini-batch sampling & bagging
