--- a/README.org
+++ b/README.org
@@ -28,9 +28,15 @@ are running on H4H cluster at [[http://www.uhnresearch.ca/][UHN]], in Toronto Ca
 
 Licence: MIT Licence
 
-* Algorithms listed will include:
+* Algorithms will include:
+   - QC for most next generation sequencing platforms
+   - Abundance analysis (FPKM, RPKM) multi-tool cross comparison
+   - Genome & targeted exome sequencing
+   - Variant calling (SNVs, CNVs, Indels)
+   - Gene/Variant annotations (model, non-model species) multi-DB cross matches
+   - Differential gene expression (microarrays, RNA-seq) in R/Python
    - Feature engineering & regularization (lasso, ridge, elastic)
-   - Data subsetting, extraction, reformating
+   - Data subsetting, extraction, reformatting & report designs
    - Subsampling, mini-batch sampling & bagging
    - Data spliting (binomial and multiclass)
    - Unsupervised learning (fuzzy, hierarchical clustering)
@@ -58,32 +64,34 @@ Licence: MIT Licence
 =scripts can be scaled while adjusted for any sample size. Majority
 reproducible on other data sets=
 1. =hot= [[https://github.com/neocruiser/pipelines/blob/master/r/classification.R][Machine & Deep learning multi-model]] analyses for cancer prediction in R (Bassim 2018)
-2. [[https://github.com/neocruiser/pipelines/blob/master/r/line.ranking.R][Gene ranking]] in R & [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.extract.genes.sh][multi-output wrangling]] in shell from transcriptional data (Bassim 2018)
+2. [[https://github.com/neocruiser/pipelines/blob/master/r/line.ranking.R][Gene ranking]] in R & [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.extract.genes.sh][multi-output wrangling]] in shell/bash from transcriptional data (Bassim 2018)
 3. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.expression.distribution.R][Polygenic]] & [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.pval.distribution.R][probability distributions]] reported by batch visualization in R (Bassim 2018)
-4. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][Microarray sample preprocessing & automation]] in shell (Bassim 2018)
+4. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][Microarray sample preprocessing & automation]] in shell/bash (Bassim 2018)
 5. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][Microarray multi-contrast & batch logging]] in R (Bassim 2018)
-6. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][Aggregated performance metrics]] for transcriptional analyses in shell (Bassim 2018)
-7. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][Data restructuring & mining]] for network automation in shell (Bassim 2018)
+6. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][Aggregated performance metrics]] for transcriptional analyses in shell/bash (Bassim 2018)
+7. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][Data restructuring & mining]] for network automation in shell/bash (Bassim 2018)
 8. =hot= [[Https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.affymetrix.R][Multi-grid search approch with data-driven gene networks]] in R (Bassim 2018)
 9. [[https://github.com/neocruiser/pipelines/blob/master/r/heatmaps.3.0.R][Clustering & gene expression with bootstrapped approach & metric aggregation]] in R (Bassim 2018)
-10. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][Two species reads separation from dual RNA-seq of host & parasite]] in shell (Bassim 2017)
-11. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Sequence abundance and expression from dual RNA-seq]] in R (Bassim 2017)
-12. =hot= [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][Aggregating and optimizing data structure ]]& large scale annotation or pathway discovery in shell (Bassim 2016) 
-13. [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Reducing transcriptome size]] by correcting for read abundance in shell (Bassim 2017)
-14. [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][Transcriptome assembly of RNA-seq data optimized on high performance clusters]] in shell (Bassim 2016)
-15. [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][Genome-guided assembly of RNA-seq data for new gene discovery]] in shell (Bassim 2016)
-16. =hot= [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][RNA-seq gene expression multi-approach & metric aggregation]] in shell and R (Bassim 2016)
-17. [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][Shotgun sequencing pipeline]] & virus classification or microbes identification in shell (Bassim 2016)
-18. [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][Fast sequence annotation against NCBI databases]] with Blast & Diamond in shell (Bassim 2016)
-19. [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][Protein sequence annotation & data aggregation]] with multi-database mining in shell (Bassim 2016)
-20. [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][RNA-seq gene annotation & sequence discovery]] with multi-database mining in shell (Bassim 2016)
-21. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.slurm][Transcriptional cross-talk & gene networks]] in shell (Bassim 2016)
-22. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.R][Decorrelating network scores from RNA-seq]] dual RNA-seq data in R (Bassim 2016)
-23. [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][Gene annotation with Hidden Markov models]] using HMM profiles in shell (Bassim 2015)
-24. [[https://github.com/neocruiser/pipelines/blob/master/calling/mappingV6.5.sh][Genomic filtering & variant calling with indel correction]] in shell (Bassim 2015)
-25. [[https://github.com/neocruiser/pipelines/blob/master/calling/mapNoCount.sh][Genomic bam processing & variant calling QCs]] in shell (Bassim 2015)
-26. [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Regularization & Ensemble learning]] on top of neural nets, GLMs & bagging in R (Bassim 2014)
-27. [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian network inference from microarrays & timeseries data]] in R (Bassim 2013)
-28. [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy clustering on Agilent microarray timeseries]] data for biomarker discovery in R (Bassim 2013)
-29. [[https://github.com/neocruiser/thesis2014/blob/master/ordination/rda%2520-%2520W2.R][Ordination analyses of timeseries microarray data]] in R (Bassim 2013)
-30. [[https://github.com/neocruiser/thesis2014/blob/master/microarrays/preProcessing_detailed.R][Agilent timeseries data processing and pattern extraction]] in R (Bassim 2012)
+10. =hot= [[https://github.com/neocruiser/pipelines/blob/master/calling/exome_calling.v2.pyclone.h4h.pbs][Targeted exome calling]] for variants in shell/bash (Bassim 2018)
+11. [[https://github.com/neocruiser/pipelines/blob/master/calling/mpileup.standalone.h4h.pbs][Variant clustering]] for classification of tumor clones in shell/bash and python (Bassim 2018)
+12. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][Two species reads separation from dual RNA-seq of host & parasite]] in shell/bash (Bassim 2017)
+13. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Sequence abundance and expression from dual RNA-seq]] in R (Bassim 2017)
+14. =hot= [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][Aggregating & optimizing data structure ]]for pathway discovery in shell/bash (Bassim 2016) 
+15. [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Reducing transcriptome size]] by correcting for read abundance in shell/bash (Bassim 2017)
+16. [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][Transcriptome assembly of RNA-seq data optimized on high performance clusters]] in shell/bash (Bassim 2016)
+17. [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][Genome-guided assembly of RNA-seq data for new gene discovery]] in shell/bash (Bassim 2016)
+18. =hot= [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][RNA-seq gene expression multi-approach & metric aggregation]] in shell/bash and R (Bassim 2016)
+19. [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][Shotgun sequencing pipeline]] & virus classification or microbes identification in shell/bash (Bassim 2016)
+20. [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][Fast sequence annotation against NCBI databases]] with Blast & Diamond in shell/bash (Bassim 2016)
+21. [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][Protein sequence annotation & data aggregation]] with multi-database mining in shell/bash (Bassim 2016)
+22. [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][RNA-seq gene annotation & sequence discovery]] with multi-database mining in shell/bash (Bassim 2016)
+23. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.slurm][Transcriptional cross-talk & gene networks]] in shell/bash (Bassim 2016)
+24. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.R][Decorrelating network scores from RNA-seq]] dual RNA-seq data in R (Bassim 2016)
+25. [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][Gene annotation with Hidden Markov models]] using HMM profiles in shell/bash (Bassim 2015)
+26. [[https://github.com/neocruiser/pipelines/blob/master/calling/mappingV6.5.sh][Genomic filtering & variant calling with indel correction]] in shell/bash (Bassim 2015)
+27. [[https://github.com/neocruiser/pipelines/blob/master/calling/mapNoCount.sh][Genomic bam processing & variant calling QCs]] in shell/bash (Bassim 2015)
+28. [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Regularization & Ensemble learning]] on top of neural nets, GLMs & bagging in R (Bassim 2014)
+29. [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian network inference from microarrays & timeseries data]] in R (Bassim 2013)
+30. [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy clustering on Agilent microarray timeseries]] data for biomarker discovery in R (Bassim 2013)
+31. [[https://github.com/neocruiser/thesis2014/blob/master/ordination/rda%2520-%2520W2.R][Ordination analyses of timeseries microarray data]] in R (Bassim 2013)
+32. [[https://github.com/neocruiser/thesis2014/blob/master/microarrays/preProcessing_detailed.R][Agilent timeseries data processing and pattern extraction]] in R (Bassim 2012)
